# randouyin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pw  Dockerfile.python  Makefile  README.md  docker-compose.debug.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  check.yml
randouyin/: play.py
randouyin/adapters/: beautiful_soup_parser.py  httpx_client.py  httpx_downloader.py  playwright_scraper.py
randouyin/adapters/scraper/: playwright_scraper.py
randouyin/adapters/scraper/models/: search_page.py
randouyin/adapters/scraper/utils/: antiblock.py  cookie_manager.py  dead_end_handlers.py  exc.py  playwright_init.py  popup_handlers.py  request_interception.py  request_logger_decorator.py  sign_in_popup.py  timeout_error_handler.py
randouyin/config/: config_logging.py  settings.py
randouyin/domain/: video.py
randouyin/drivers/web/: dependencies.py  main.py  routes.py
randouyin/drivers/web/api/video/: video.py
randouyin/drivers/web/api/views/: index_view.py
randouyin/drivers/web/static/: styles.css
randouyin/drivers/web/templates/: index.html  video_card.html
randouyin/ports/: base_client.py  base_parser.py  base_scraper.py
tests/: conftest.py  scraping_assumptions.py
tests/adapters/: download_test.py  parser_test.py  scraper_test.py
tests/adapters/httpx/: test_httpx_requests.py
tests/example/search_video_card/: input.html  input_2.html  result.json
tests/example/video_page/: example_video_model.py  input.html  result.json
tests/web/: search_videos_test.py
(+6 files in other folders)
